FirstExperiment/error.log
In file included from global.h:3:0,
                 from Car.h:7,
                 from Car.cpp:1:
Interface.h:12:9: error: ‘Car’ was not declared in this scope
   LList<Car>* cars;
         ^
Interface.h:12:12: error: template argument 1 is invalid
   LList<Car>* cars;
            ^
Interface.h:13:3: error: ‘ofstream’ does not name a type
   ofstream fout;
   ^
Interface.h:14:3: error: ‘ifstream’ does not name a type
   ifstream fin;
   ^
Interface.h:16:20: error: expected ‘)’ before ‘databaseFileName’
   Interface(string databaseFileName=carDatabase);
                    ^
In file included from Car.h:7:0,
                 from Interface.h:5,
                 from Interface.cpp:1:
global.h:12:8: error: ‘Interface’ does not name a type
 extern Interface interface;
        ^
In file included from Car.h:7:0,
                 from Interface.h:5,
                 from main.cpp:2:
global.h:12:8: error: ‘Interface’ does not name a type
 extern Interface interface;
        ^
main.cpp: In function ‘int main()’:
main.cpp:6:2: error: ‘interface’ was not declared in this scope
  interface.operating();
  ^
make: *** [a.out] Error 1
